--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
     "serve-favicon": "~2.3.2",
-    "sqlite3": "^4.0.0"
   }
 }
