--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "morgan": "~1.7.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "~2.3.2"
   }
 }
