--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "tedious": "^2.3.1"
   }
 }
