--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "express": "^4.16.3",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
+    "pg": "^7.10.0",
     "sequelize": "^4.37.6",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.0.6",
     "tedious": "^2.3.1"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.2.0"
   }
 }
